--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,22 @@ body {
   background-color: #ffffff;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 ul,
 ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
   list-style-type: none;
 }
 
@@ -13,7 +27,16 @@ a {
   text-decoration: none;
 }
 
+header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+}
+
 .logo {
+  display: flex;
+  padding: 24px 76px 24px 156px;
   text-decoration: none;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -33,6 +56,19 @@ a {
   color: #2e2f42;
 }
 
+nav {
+  display: flex;
+  align-items: center; /* Центрирование логотипа и списка */
+  gap: 20px; /* Расстояние между элементами */
+}
+.nav-list {
+  display: flex; /* Делаем элементы списка горизонтальными */
+  gap: 20px; /* Отступы между пунктами меню */
+  list-style: none; /* Убираем маркеры списка */
+  margin: 0;
+  padding: 0;
+}
+
 .nav-link {
   font-weight: 500;
   font-size: 16px;
@@ -50,9 +86,21 @@ a {
 
 .contacts {
   font-style: normal;
+  display: flex;
+  gap: 20px;
+  padding-right: 156px;
+}
+
+.contacts-list {
+  display: flex; /* Элементы списка расположены в линию */
+  gap: 40px; /* Расстояние между контактами */
+  list-style: none; /* Убираем маркеры списка */
+  margin: 0;
+  padding: 0;
 }
 
 .contacts-link {
+  padding: 24px 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
