--- a/css/styles.css
+++ b/css/styles.css
@@ -27,17 +27,23 @@ a {
   text-decoration: none;
 }
 
-header .container {
+.page-header .container {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
+}
+
+nav {
+  display: flex;
 }
 
 .logo {
-  display: flex;
-  margin: 24px 76px 24px 156px;
-  text-decoration: none;
+  margin: 24px 76px 24px 0;
+  width: 115px;
+  height: 24px;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -54,10 +60,6 @@ header .container {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #2e2f42;
-}
-
-nav {
-  display: flex;
 }
 
 .nav-list {
@@ -83,18 +85,16 @@ nav {
 
 .contacts {
   font-style: normal;
-  display: flex;
-  gap: 20px;
-  margin-right: 156px;
+  /* display: flex; */
 }
 
 .contacts-list {
   display: flex; /* Элементы списка расположены в линию */
   gap: 40px; /* Расстояние между контактами */
+  margin: 24px 0;
 }
 
 .contacts-link {
-  padding: 24px 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
