--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ body {
   background-color: #ffffff;
 }
 
+/* #region resets */
 h1,
 h2,
 h3,
@@ -11,15 +12,13 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 ul,
 ol {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
+  margin: 0;
+  padding: 0;
   list-style-type: none;
 }
 
@@ -27,16 +26,27 @@ a {
   text-decoration: none;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+/* #endregion resets */
+
+/* conteainer settings */
+.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+/* #region page header */
 .page-header {
   border-bottom: 1px solid #e7e9fc;
 }
 
-.page-header .container {
-  width: 1158px;
-  margin: 0 auto;
-  padding: 0 15px;
+.header-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -46,9 +56,6 @@ a {
 }
 
 .logo {
-  margin: 24px 76px 24px 0;
-  width: 115px;
-  height: 24px;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -58,21 +65,23 @@ a {
   color: #4d5ae5;
 }
 
+.header-logo {
+  padding: 24px 0;
+  margin-right: 76px;
+}
+
 .header-logo .logo-part {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.16667;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
   color: #2e2f42;
 }
 
 .nav-list {
-  display: flex; /* Делаем элементы списка горизонтальными */
-  gap: 40px; /* Отступы между пунктами меню */
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 
 .nav-link {
+  display: block;
   padding: 24px 0;
   font-weight: 500;
   font-size: 16px;
@@ -90,37 +99,59 @@ a {
 
 .contacts {
   font-style: normal;
-  /* display: flex; */
+  margin-left: auto;
 }
 
 .contacts-list {
-  display: flex; /* Элементы списка расположены в линию */
-  gap: 40px; /* Расстояние между контактами */
-  margin: 24px 0;
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 
 .contacts-link {
+  display: block;
+  padding: 24px 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
+/* #endregion page header */
 
-.hero-section-stngs {
+/* #region hero section */
+.hero-section {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   background-color: #2e2f42;
+  border: 1px solid #000;
+}
+
+.hero-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .page-tittle {
+  width: 496px;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  margin-bottom: 48px;
 }
 
 .order-button {
+  display: block;
   cursor: pointer;
+  border: 1px solid #000;
+  padding: 16px 32px;
+  border-radius: 4px;
+  min-width: 169px;
+  height: 56px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -133,8 +164,37 @@ a {
 .order-button:focus {
   background-color: #404bbf;
 }
+/* #endregion hero section */
 
-.feature-tittle {
+/* #region feature section */
+.features-container {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+.features-list {
+  display: flex;
+  gap: 24px;
+}
+
+.features-item {
+  width: calc((100% - 72px) / 4);
+}
+
+.features-tittle {
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -142,19 +202,27 @@ a {
   color: #2e2f42;
 }
 
-.feature-text {
+.features-text {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
+/* #endregion feature section */
 
+/* #region team section */
 .team-section {
   background-color: #f4f4fd;
 }
 
+.team-container {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 .team-tittle {
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -164,11 +232,23 @@ a {
   text-transform: capitalize;
 }
 
+.team-list {
+  display: flex;
+  width: calc((100%-72px) / 4);
+  gap: 24px;
+}
+
 .team-element {
   background-color: #ffffff;
+  border-radius: 0 0 4px 4px;
+}
+
+.team-text-container {
+  padding: 32px 0;
 }
 
 .team-name {
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -185,8 +265,26 @@ a {
   text-align: center;
   color: #434455;
 }
+/* #endregion team section */
+
+/* #region portfolio */
+.portfolio-container {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px 24px;
+}
+
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+}
 
 .portolio-tittle {
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -196,7 +294,14 @@ a {
   text-transform: capitalize;
 }
 
+.portfolio-descr-container {
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  padding: 32px 16px;
+}
+
 .portfolio-product {
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -211,7 +316,9 @@ a {
   letter-spacing: 0.02em;
   color: #434455;
 }
+/* #endregion portfolio */
 
+/* #region footer */
 .page-footer {
   background-color: #2e2f42;
 }
@@ -220,10 +327,22 @@ a {
   color: #f4f4fd;
 }
 
+.footer-logo {
+  display: block;
+  margin-bottom: 16px;
+}
+
+.footer-container {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
 .footer-text {
+  width: 264px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
 }
+/* #endregion footer */
